Update project description for clarity

--- a/efemeral_cli_0.1.2
+++ b/efemeral_cli_0.1.2
@@ -1,6 +1,6 @@
 #!/usr/bin/env python3
 
-# Efemeral by Cleo. A P2P CLI chat that attempts to emulate the IRC days of yore, entirely within your command line!
+# Efemeral by Cleo. A CLI chat that attempts to emulate the IRC days of yore, entirely within your command line!
 #
 # You may not copy this code for any reason. This is not because you are forbidden from doing so.
 # It's because my code fucking sucks.
